<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		iphone_14___15_pro___2
	 *	@date 		Wednesday 01st of November 2023 11:47:19 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/iphone_14___15_pro___2" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_iphone_14___15_pro___2_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__iphone_14___15_pro___2_ek2"
					android:background="@drawable/_bg__iphone_14___15_pro___2_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="393dp"
					android:layout_height="852dp" />


				<RelativeLayout android:id="@+id/frame_1"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__frame_1_ek1"
						android:background="@drawable/_bg__frame_1_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="393dp"
						android:layout_height="852dp" />

					<ImageView android:id="@+id/_3qoyei_1"
						android:src="@drawable/_3qoyei_1"
						android:contentDescription="_3qoyei_1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="393dp"
						android:layout_height="852dp" />

					<View   android:id="@+id/rectangle_3"
						android:background="@drawable/rectangle_3_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="808dp"
						android:layout_width="393dp"
						android:layout_height="44dp" />


					<RelativeLayout android:id="@+id/group_1"
						android:layout_marginTop="745dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__group_1_ek1"
							android:background="@drawable/_bg__group_1_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="-745dp"
							android:layout_width="393dp"
							android:layout_height="61dp" />

						<View   android:id="@+id/rectangle_1"
							android:background="@drawable/rectangle_1_shape"
							 android:alpha="0.75"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="393dp"
							android:layout_height="61dp" />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/onrec"
						android:layout_marginTop="318dp"
						android:layout_marginStart="37dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__onrec_ek1"
							android:background="@drawable/_bg__onrec_ek1_shape"
							 android:layout_marginStart="-37dp"
							android:layout_marginTop="-318dp"
							android:layout_width="322dp"
							android:layout_height="94dp" />


						<RelativeLayout android:id="@+id/____icon__humidity_"
							android:layout_marginTop="0dp"
							android:layout_marginStart="255dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg______icon__humidity__ek1"
								android:background="@drawable/_bg______icon__humidity__ek1_shape"
								 android:layout_marginStart="-292dp"
								android:layout_marginTop="-318dp"
								android:layout_width="67dp"
								android:layout_height="94dp" />

							<ImageView android:id="@+id/vector_ek3"
								android:src="@drawable/vector_ek3"
								android:contentDescription="vector_ek3"
								 android:layout_marginStart="23dp"
								android:layout_marginTop="0dp"
								android:layout_width="22dp"
								android:layout_height="28dp" />

							<TextView android:id="@+id/_100_"
								android:textSize="30sp"
								android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
								android:layout_marginLeft="3dp"
								android:layout_marginTop="49dp"
								android:layout_width="85dp"
								android:layout_height="54dp"
								android:text="@string/_100__string"
								 />

							<TextView android:id="@+id/humidity"
								android:textSize="16sp"
								android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="34dp"
								android:layout_width="81.6dp"
								android:layout_height="28.6dp"
								android:text="@string/humidity_string"
								 />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/____icon__strong_wind_"
							android:layout_marginTop="8dp"
							android:layout_marginStart="125dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg______icon__strong_wind__ek1"
								android:background="@drawable/_bg______icon__strong_wind__ek1_shape"
								 android:layout_marginStart="-162dp"
								android:layout_marginTop="-326dp"
								android:layout_width="75dp"
								android:layout_height="86dp" />

							<ImageView android:id="@+id/vector_ek4"
								android:src="@drawable/vector_ek4"
								android:contentDescription="vector_ek4"
								 android:layout_marginStart="31dp"
								android:layout_marginTop="6dp"
								android:layout_width="37dp"
								android:layout_height="20dp" />

							<TextView android:id="@+id/wind"
								android:textSize="16sp"
								android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
								android:layout_marginLeft="13dp"
								android:layout_marginTop="26dp"
								android:layout_width="51.6dp"
								android:layout_height="28.6dp"
								android:text="@string/wind_string"
								 />

							<TextView android:id="@+id/_23km_h"
								android:textSize="30sp"
								android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
								android:layout_marginLeft="20dp"
								android:layout_marginTop="41dp"
								android:layout_width="98dp"
								android:layout_height="54dp"
								android:text="23"
								 />


							<RelativeLayout android:id="@+id/____icon__direction_down_right_"
								android:layout_marginTop="0dp"
								android:layout_marginStart="0dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<View   android:id="@+id/_bg______icon__direction_down_right__ek1"
									android:background="@drawable/_bg______icon__direction_down_right__ek1_shape"
									 android:layout_marginStart="-162dp"
									android:layout_marginTop="-326dp"
									android:layout_width="26dp"
									android:layout_height="26dp" />

								<ImageView android:id="@+id/vector_ek5"
									android:src="@drawable/vector_ek5"
									android:contentDescription="vector_ek5"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="26dp"
									android:layout_height="26dp" />

							</RelativeLayout>

						</RelativeLayout>


						<RelativeLayout android:id="@+id/feels_like"
							android:layout_marginTop="3dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__feels_like_ek1"
								android:background="@drawable/_bg__feels_like_ek1_shape"
								 android:layout_marginStart="-37dp"
								android:layout_marginTop="-321dp"
								android:layout_width="70dp"
								android:layout_height="91dp" />


							<RelativeLayout android:id="@+id/____icon__stars_"
								android:layout_marginTop="11dp"
								android:layout_marginStart="6dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<View   android:id="@+id/_bg______icon__stars__ek1"
									android:background="@drawable/_bg______icon__stars__ek1_shape"
									 android:layout_marginStart="-43dp"
									android:layout_marginTop="-332dp"
									android:layout_width="21.04dp"
									android:layout_height="21.1dp" />

								<ImageView android:id="@+id/vector_ek6"
									android:src="@drawable/vector_ek6"
									android:contentDescription="vector_ek6"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="21.04dp"
									android:layout_height="21.1dp" />

							</RelativeLayout>

							<TextView android:id="@+id/feels_like_ek2"
								android:textSize="16sp"
								android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="31dp"
								android:layout_width="84.6dp"
								android:layout_height="28.6dp"
								android:text="@string/feels_like_ek2_string"
								 />

							<ImageView android:id="@+id/vector_ek7"
								android:src="@drawable/vector_ek7"
								android:contentDescription="vector_ek7"
								 android:layout_marginStart="22dp"
								android:layout_marginTop="0dp"
								android:layout_width="26dp"
								android:layout_height="35dp" />


							<RelativeLayout android:id="@+id/____icon__celsius_"
								android:layout_marginTop="46dp"
								android:layout_marginStart="11dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<View   android:id="@+id/_bg______icon__celsius__ek1"
									android:background="@drawable/_bg______icon__celsius__ek1_shape"
									 android:layout_marginStart="-48dp"
									android:layout_marginTop="-367dp"
									android:layout_width="38dp"
									android:layout_height="45dp" />

								<TextView
									android:id="@+id/_0"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_marginLeft="0dp"
									android:layout_marginTop="0dp"
									android:textSize="30sp"
									android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
									android:singleLine="true"
									android:gravity="center"
									android:text="100" />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/onbackground"
						android:layout_marginTop="181dp"
						android:layout_marginStart="50dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__onbackground_ek1"
							android:background="@drawable/_bg__onbackground_ek1_shape"
							 android:layout_marginStart="-109dp"
							android:layout_marginTop="-181dp"
							android:layout_width="177dp"
							android:layout_height="144dp" />


						<RelativeLayout android:id="@+id/____icon__celsius__ek2"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg______icon__celsius__ek3"
								android:background="@drawable/_bg______icon__celsius__ek3_shape"
								 android:layout_marginStart="-109dp"
								android:layout_marginTop="-181dp"
								android:layout_width="96dp"
								android:layout_height="144dp" />


							<TextView
								android:id="@+id/_5"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_alignParentStart="true"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:textSize="96sp"
								android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
								android:text="-25ºC" />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/____icon__rain_mix_"
							android:layout_marginTop="58dp"
							android:layout_marginStart="116dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg______icon__rain_mix__ek1"
								android:background="@drawable/_bg______icon__rain_mix__ek1_shape"
								 android:layout_marginStart="-225dp"
								android:layout_marginTop="-239dp"
								android:layout_width="61dp"
								android:layout_height="61.1dp" />

							<ImageView
								android:id="@+id/vector_ek10"
								android:layout_width="61dp"
								android:layout_height="61.1dp"
								android:layout_alignParentEnd="true"
								android:layout_marginEnd="16dp"
								android:src="@drawable/vector_ek10"
								android:contentDescription="vector_ek10" />

						</RelativeLayout>

					</RelativeLayout>

					<ImageView android:id="@+id/vector_ek11"
						android:src="@drawable/vector_ek11"
						android:contentDescription="vector_ek11"
						 android:layout_marginStart="356dp"
						android:layout_marginTop="55dp"
						android:layout_width="40dp"
						android:layout_height="40dp" />

					<TextView android:id="@+id/_10_49"
						android:textSize="25sp"
						android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
						android:layout_marginLeft="48dp"
						android:layout_marginTop="15dp"
						android:layout_width="77.5dp"
						android:layout_height="44.5dp"
						android:text="@string/_10_49_string"
						 />


					<RelativeLayout android:id="@+id/right_system_icon"
						android:layout_marginTop="25.88dp"
						android:layout_marginStart="308dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__right_system_icon_ek1"
							android:background="@drawable/_bg__right_system_icon_ek1_shape"
							 android:layout_marginStart="-308dp"
							android:layout_marginTop="-26dp"
							android:layout_width="66.81dp"
							android:layout_height="14.24dp" />


						<RelativeLayout android:id="@+id/____icon__battery_full_"
							android:layout_marginTop="0dp"
							android:layout_marginStart="48dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg______icon__battery_full__ek1"
								android:background="@drawable/_bg______icon__battery_full__ek1_shape"
								 android:layout_marginStart="-356dp"
								android:layout_marginTop="-26dp"
								android:layout_width="18.81dp"
								android:layout_height="14.12dp" />

							<ImageView android:id="@+id/vector_ek12"
								android:src="@drawable/vector_ek12"
								android:contentDescription="vector_ek12"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="18.81dp"
								android:layout_height="14.12dp" />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/____icon__wifi_"
							android:layout_marginTop="0dp"
							android:layout_marginStart="26dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg______icon__wifi__ek1"
								android:background="@drawable/_bg______icon__wifi__ek1_shape"
								 android:layout_marginStart="-334dp"
								android:layout_marginTop="-26dp"
								android:layout_width="13.18dp"
								android:layout_height="14dp" />

							<ImageView android:id="@+id/vector_ek13"
								android:src="@drawable/vector_ek13"
								android:contentDescription="vector_ek13"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="13.18dp"
								android:layout_height="14dp" />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/____icon__signal_"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg______icon__signal__ek1"
								android:background="@drawable/_bg______icon__signal__ek1_shape"
								 android:layout_marginStart="-308dp"
								android:layout_marginTop="-26dp"
								android:layout_width="12dp"
								android:layout_height="13.71dp" />

							<ImageView
								android:id="@+id/vector_ek14"
								android:layout_width="12dp"
								android:layout_height="13.71dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:contentDescription="vector_ek14"
								android:src="@drawable/vector_ek14" />

						</RelativeLayout>

					</RelativeLayout>

					<TextView android:id="@+id/sun_8"
						android:textSize="72sp"
						android:textColor="@color/_bg__iphone_14___15_pro___2_ek2_color"
						android:layout_marginLeft="80dp"
						android:layout_marginTop="119dp"
						android:layout_width="244.2dp"
						android:layout_height="129.2dp"
						android:text="@string/sun_8_string"
						 />

					<SearchView  android:id="@+id/search_view"
						android:background="@drawable/rectangle_2_shape"
						 android:layout_marginStart="5dp"
						android:layout_marginTop="56dp"
						android:layout_width="341dp"
						android:layout_height="46dp"
						android:iconifiedByDefault="false"
						android:queryHint="Search here"
						app:searchIcon="@null"/>





					<ImageView android:id="@+id/polygon_1"
						android:src="@drawable/polygon_1"
						android:contentDescription="polygon_1"
						 android:layout_marginStart="88dp"
						android:layout_marginTop="814dp"
						android:layout_width="24dp"
						android:layout_height="27.71dp" />

					<View   android:id="@+id/ellipse_2"
						android:background="@drawable/ellipse_2_shape"
						 android:layout_marginStart="187dp"
						android:layout_marginTop="817dp"
						android:layout_width="26dp"
						android:layout_height="26dp" />

					<View   android:id="@+id/rectangle_5"
						android:background="@drawable/rectangle_5_shape"
						 android:layout_marginStart="282dp"
						android:layout_marginTop="817dp"
						android:layout_width="27dp"
						android:layout_height="27dp" />

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>